# linux-embedded-dev

./: .gitignore  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
examples/: oss-inspired-flows.md  target.imx6ull.yaml  target.stm32f103.yaml
references/: agent-architecture-notes.md  board-case-template.md  boot-chain-and-startup.md  build-rootfs-userspace.md  camera-companion-index.md  camera-v4l2-workflow.md  char-device-and-platform-driver-path.md  common-bus-debugging.md  debug-checklists.md  debugctl-cli-prototype.md  device-tree-and-driver-workflow.md  full-link-debug-pipeline.md  imx6ull-camera-pipeline.md  linux-embedded-debug-workflow.md  linux-embedded-learning-roadmap.md  module-index.md  oss-reference-map.md  ov5640-bringup-checklist.md  perf-and-observability.md  perf-tuning-checklist.md  profiling-playbook.md  project-learning-note.md  repo-reading-list.md  review-checklist.md  v4l2-buffer-lifecycle.md
src/debugctl/: __init__.py  __main__.py  cli.py  commands.py  mcu.py  models.py  runtime.py  target.py  transport.py
tests/: test_debugctl.py
