[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "debugctl"
version = "0.1.0"
description = "Prototype CLI for embedded target status, evidence collection, and diagnosis"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
debugctl = "debugctl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
